hphp/test/zend/good/Zend/tests/ns_077_3.php.expectf

Fatal error: Undefined constant 'foo\unknown' in %s/ns_077_3.php on line 4
